--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Colin Barrett Stats
+title: Colin Barret
 email: cole.barrett5@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Description here words and stuff and a description of the website. (Links to seperate pages here)?
