--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Colin Barret
+title: Colin Barrett
 email: cole.barrett5@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Description here words and stuff and a description of the website. (Links to seperate pages here)?
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+#twitter_username: jekyllrb
+github_username:  cbarre01
 
 # Build settings
 theme: minima
