--- a/_config.yml
+++ b/_config.yml
@@ -48,8 +48,11 @@ minima:
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
-#header_pages:
-# - about.md
+header_pages:
+ - about.md
+ - bio.md
+ - projects.markdown
+ - resume.md
 
 # Build settings
 theme: minima
